--- a/src/pages/signUp/signUp.css
+++ b/src/pages/signUp/signUp.css
@@ -1,230 +1,255 @@
-/* @font-face {
-    font-family: "Poppins-Regular";
-    src: url("../fonts/poppins/Poppins-Regular.ttf"); }
-  @font-face {
-    font-family: "Poppins-SemiBold";
-    src: url("../fonts/poppins/Poppins-SemiBold.ttf"); } */
-  * {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box; }
-  
-  body {
-    font-family: "Poppins-Regular";
-    color: #333;
-    font-size: 13px;
-    margin: 0; }
-  
-  input, textarea, select, button {
-    font-family: "Poppins-Regular";
-    color: #333;
-    font-size: 13px; }
-  
-  p, h1, h2, h3, h4, h5, h6, ul {
-    margin: 0; }
-  
-  img {
-    max-width: 100%; }
-  
-  ul {
-    padding-left: 0;
-    margin-bottom: 0; }
-  
-  a:hover {
-    text-decoration: none; }
-  
-  :focus {
-    outline: none; }
-  
-  .wrapperSign {
-    border: 30px;
-    min-height: 100vh;
-    padding : 1.5%;
-    background-size: cover;
-    background-repeat: no-repeat;
-    display: flex;
-    align-items: center; }
-  
-  .inner {
-    padding: 20px;
-     background: #fff;
-    max-width: 850px; 
-    margin: auto;
-    display: flex; }
-    .inner .image-holder {
-      width: 50%; 
-    margin-top: 90px;}
-    .inner form {
-      width: 50%;
-      padding-top: 10px;
-      padding-left: 45px;
-      padding-right: 45px; }
-    .inner h3 {
-      text-transform: uppercase;
-      font-size: 25px;
-      font-family: "Poppins-SemiBold";
-      text-align: center;
-      margin-bottom: 28px; }
-  
-  /* .form-group {
-    display: flex; }
-    .form-group input {
-      width: 50%; }
-      .form-group input:first-child {
-        margin-right: 25px; } */
-  
-  .form-wrapper {
-    
-    position: relative; }
-    .form-wrapper i {
-      position: absolute;
-      bottom: 9px;
-      right: 0; }
-  
-  .form-controlSign {
-    border: 1px solid #333;
-    border-top: none;
-    border-right: none;
-    border-left: none;
-    display: block;
-    width: 100%;
-    height: 30px;
-    padding: 0;
-    margin-bottom: 25px;
-    margin-top: -3px;
-     }
-    .form-controlSign::-webkit-input-placeholder {
-      font-size: 13px;
-      color: #333;
-      font-family: "Poppins-Regular"; }
-    .form-controlSign::-moz-placeholder {
-      font-size: 13px;
-      color: #333;
-      font-family: "Poppins-Regular"; }
-    .form-controlSign:-ms-input-placeholder {
-      font-size: 13px;
-      color: #333;
-      font-family: "Poppins-Regular"; }
-    .form-controlSign:-moz-placeholder {
-      font-size: 13px;
-      color: #333;
-      font-family: "Poppins-Regular"; }
-  
-  select {
-    -moz-appearance: none;
-    -webkit-appearance: none;
-    cursor: pointer;
-    padding-left: 20px; }
-    select option[value=""][disabled] {
-      display: none; }
-  
-  button {
-    border: none;
-    width: 164px;
-    height: 51px;
-    margin: auto;
-   
-   
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 0;
-    background: #1B8DA6;
-    border-radius: 50px;
-    font-size: 15px;
-    color: #fff;
-    vertical-align: middle;
-    -webkit-transform: perspective(1px) translateZ(0);
-    transform: perspective(1px) translateZ(0);
-    -webkit-transition-duration: 0.3s;
-    transition-duration: 0.3s; }
-    button i {
-      margin-left: 10px;
-      -webkit-transform: translateZ(0);
-      transform: translateZ(0); }
-    button:hover i, button:focus i, button:active i {
-      -webkit-animation-name: hvr-icon-wobble-horizontal;
-      animation-name: hvr-icon-wobble-horizontal;
-      -webkit-animation-duration: 1s;
-      animation-duration: 1s;
-      -webkit-animation-timing-function: ease-in-out;
-      animation-timing-function: ease-in-out;
-      -webkit-animation-iteration-count: 1;
-      animation-iteration-count: 1; }
-  
-      label{
-        font-size: 16px;
-        font-weight: 600;
-        color: #454643;
-      }
-  
-      .details{
-        text-align: right;
-        margin-right: 1.6px;
-        margin-top: -15px;
-        margin-bottom:  2.3%;
-        color: #1B8DA6;
-      }
-    
-  @-webkit-keyframes hvr-icon-wobble-horizontal {
-    16.65% {
-      -webkit-transform: translateX(6px);
-      transform: translateX(6px); }
-    33.3% {
-      -webkit-transform: translateX(-5px);
-      transform: translateX(-5px); }
-    49.95% {
-      -webkit-transform: translateX(4px);
-      transform: translateX(4px); }
-    66.6% {
-      -webkit-transform: translateX(-2px);
-      transform: translateX(-2px); }
-    83.25% {
-      -webkit-transform: translateX(1px);
-      transform: translateX(1px); }
-    100% {
-      -webkit-transform: translateX(0);
-      transform: translateX(0); } }
-  @keyframes hvr-icon-wobble-horizontal {
-    16.65% {
-      -webkit-transform: translateX(6px);
-      transform: translateX(6px); }
-    33.3% {
-      -webkit-transform: translateX(-5px);
-      transform: translateX(-5px); }
-    49.95% {
-      -webkit-transform: translateX(4px);
-      transform: translateX(4px); }
-    66.6% {
-      -webkit-transform: translateX(-2px);
-      transform: translateX(-2px); }
-    83.25% {
-      -webkit-transform: translateX(1px);
-      transform: translateX(1px); }
-    100% {
-      -webkit-transform: translateX(0);
-      transform: translateX(0); } }
-  @media (max-width: 1199px) {
-    .wrapperSign {
-      background-position: right center; } }
-  @media (max-width: 991px) {
-    .inner form {
-      padding-top: 10px;
-      padding-left: 30px;
-      padding-right: 30px; } }
-  @media (max-width: 767px) {
-    .inner {
-      display: block; }
-      .inner .image-holder {
-        width: 100%; }
-      .inner form {
-        width: 100%;
-        padding: 40px 0 30px; }
-  
-    button {
-      margin-top: 60px; } }
-    
-  .wrapperSign{
-      background-image: url('../../assets/signUp/bg-registration-form-1.jpg');
+.form-controlSign,
+textarea,
+select,
+.btnSignup {
+  font-family: "Poppins-Regular";
+  color: #333;
+  font-size: 13px;
+}
+p,
+h3,
+ul {
+  margin: 0;
+}
+
+img {
+  max-width: 100%;
+}
+
+ul {
+  padding-left: 0;
+  margin-bottom: 0;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+:focus {
+  outline: none;
+}
+
+.wrapperSign {
+  border: 30px;
+  min-height: 100vh;
+  padding: 1.5%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  align-items: center;
+}
+
+.innerSignUp {
+  padding: 20px;
+  background: #fff;
+  max-width: 850px;
+  margin: auto;
+  display: flex;
+}
+.innerSignUp .image-holder {
+  width: 50%;
+  margin-top: 90px;
+}
+.formSignUp {
+  width: 50%;
+  padding-top: 10px;
+  padding-left: 45px;
+  padding-right: 45px;
+}
+.h3Signup {
+  text-transform: uppercase;
+  font-size: 25px;
+  font-family: "Poppins-SemiBold";
+  text-align: center;
+  margin-bottom: 28px;
+}
+
+.form-wrapper {
+  position: relative;
+}
+.form-wrapper i {
+  position: absolute;
+  bottom: 9px;
+  right: 0;
+}
+
+.form-controlSign {
+  border: 1px solid #333;
+  border-top: none;
+  border-right: none;
+  border-left: none;
+  display: block;
+  width: 100%;
+  height: 30px;
+  padding: 0;
+  margin-bottom: 25px;
+  margin-top: -3px;
+}
+.form-controlSign::-webkit-input-placeholder {
+  font-size: 13px;
+  color: #333;
+  font-family: "Poppins-Regular";
+}
+.form-controlSign::-moz-placeholder {
+  font-size: 13px;
+  color: #333;
+  font-family: "Poppins-Regular";
+}
+.form-controlSign:-ms-input-placeholder {
+  font-size: 13px;
+  color: #333;
+  font-family: "Poppins-Regular";
+}
+.form-controlSign:-moz-placeholder {
+  font-size: 13px;
+  color: #333;
+  font-family: "Poppins-Regular";
+}
+
+select {
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  cursor: pointer;
+  padding-left: 20px;
+}
+select option[value=""][disabled] {
+  display: none;
+}
+
+.btnSignup {
+  border: none;
+  width: 164px;
+  height: 51px;
+  margin: auto;
+
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  background: #1b8da6;
+  border-radius: 50px;
+  font-size: 15px;
+  color: #fff;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+}
+.btnSignup i {
+  margin-left: 10px;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+}
+.btnSignup:hover i,
+.btnSignup:focus i,
+.btnSignup:active i {
+  -webkit-animation-name: hvr-icon-wobble-horizontal;
+  animation-name: hvr-icon-wobble-horizontal;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-timing-function: ease-in-out;
+  animation-timing-function: ease-in-out;
+  -webkit-animation-iteration-count: 1;
+  animation-iteration-count: 1;
+}
+
+label {
+  font-size: 16px;
+  font-weight: 600;
+  color: #454643;
+}
+
+.details {
+  text-align: right;
+  margin-right: 1.6px;
+  margin-top: -15px;
+  margin-bottom: 2.3%;
+  color: #1b8da6;
+}
+
+@-webkit-keyframes hvr-icon-wobble-horizontal {
+  16.65% {
+    -webkit-transform: translateX(6px);
+    transform: translateX(6px);
   }
+  33.3% {
+    -webkit-transform: translateX(-5px);
+    transform: translateX(-5px);
+  }
+  49.95% {
+    -webkit-transform: translateX(4px);
+    transform: translateX(4px);
+  }
+  66.6% {
+    -webkit-transform: translateX(-2px);
+    transform: translateX(-2px);
+  }
+  83.25% {
+    -webkit-transform: translateX(1px);
+    transform: translateX(1px);
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+  }
+}
+@keyframes hvr-icon-wobble-horizontal {
+  16.65% {
+    -webkit-transform: translateX(6px);
+    transform: translateX(6px);
+  }
+  33.3% {
+    -webkit-transform: translateX(-5px);
+    transform: translateX(-5px);
+  }
+  49.95% {
+    -webkit-transform: translateX(4px);
+    transform: translateX(4px);
+  }
+  66.6% {
+    -webkit-transform: translateX(-2px);
+    transform: translateX(-2px);
+  }
+  83.25% {
+    -webkit-transform: translateX(1px);
+    transform: translateX(1px);
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+  }
+}
+@media (max-width: 1199px) {
+  .wrapperSign {
+    background-position: right center;
+  }
+}
+@media (max-width: 991px) {
+  .formSignUp {
+    padding-top: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+}
+@media (max-width: 767px) {
+  .innerSignUp {
+    display: block;
+  }
+  .innerSignUp .image-holder {
+    width: 100%;
+  }
+  .formSignUp {
+    width: 100%;
+    padding: 40px 0 30px;
+  }
+
+  .btnSignup {
+    margin-top: 60px;
+  }
+}
+
+.wrapperSign {
+  background-image: url("../../assets/signUp/bg-registration-form-1.jpg");
+}
