--- a/src/pages/changePassword/changePassword.css
+++ b/src/pages/changePassword/changePassword.css
@@ -1,11 +1,5 @@
-/* @import url(https://fonts.googleapis.com/css?family=Lato:100,300,400,700);
-@import url(https://fonts.googleapis.com/css?family=Montez); */
-
-body{
-  background-color: #f5f5f5;  
-  /* font-family: Lato; */
-}
-.profile,.content{
+ 
+.profile, .content{
   -webkit-transition: 0.5s ease;
   -moz-transition: 0.5s ease;
     transition: 0.5s ease;
@@ -36,40 +30,9 @@ body{
   /*background-color: yellow;*/
   overflow: hidden;
 }
-.short-info{
-  position: relative;
-  min-height: 100px;
-  height: auto;
-  width: 97.5%;
-  margin: 1.5% auto;
-  /*background-color: #f5f5f5;*/
-  background-color: #fff;
-  background-color: #f2ecee;
-  /*border-top: 2px solid #39cb58;*/
-  border-radius: 2.5px;
-  /*box-shadow: inset 0 -1.5px #ddd;*/
-}
-.details{
-  width: 97.5%;
-  /*background-color: red;*/
-  margin: 2.5px auto;
-}
-.tab-heads{
-  color: #777;
-  margin: 0 2.5px;
-}
-.tabs{
-  height: 200px;
-  width: 97.5%;
-  margin: 0 auto;
-  /* border-top: 2.5px solid #39cb58; */
-  background-color: #f2ecee;
-  border-radius: 2.5px;
-  /* background-color: #f3f3f3; */
-}
-
  
-input[type="file"]{
+ 
+.inputchangepassword[type="file"]{
   color: #555;
   font-size: 15px;
   top: 25px;
@@ -101,30 +64,7 @@ label[for="avatar"]{
 }
  
 
- 
-.profile:hover .btn{
-    opacity: 1;
-}
-.short-info span h3,h4{
-  display: inline-block;
-  margin: 0;
-}
-
-div.circles{
-  width: 100%;
-  margin: 0 auto;
-}
- 
-.myCircle{
-  height: 200px;
-  width: 97.5%;
-  margin: 0 auto;
-  background-color: #f2ecee;
-  border-radius: 2.5px;
-}
- 
-
-fieldset textarea,input{
+fieldset textarea,.inputchangepassword{
   font-family: Open Sans;
   font-size: 15px;
   color: #333;
@@ -142,10 +82,10 @@ fieldset textarea{
   min-height: 40px;
   max-height: 60px;
 }
-fieldset textarea:hover,input:hover{
+fieldset textarea:hover,.inputchangepassword:hover{
    background-color: #fff;
 }
-fieldset textarea:focus,input:focus{
+fieldset textarea:focus,.inputchangepassword:focus{
   box-shadow: 0 0 0 1px #1B8DA6
               ;
 }
@@ -187,17 +127,7 @@ fieldset textarea:focus,input:focus{
   font-weight: 200;
   margin: 5px auto 15px auto;
 }
-select{
-  width: 80%;
-  padding: 7px 10px;
-  background-color: #f5f5f5;
-  box-shadow: 0 0 4px rgba(10,39,129,0.7);
-  border-radius: 2.5px;
-  outline: 0;
-}
-select option{
-  padding: 5px;
-}
+ 
 fieldset{
   text-align: center;
   /* background-color: rgba(0,0,0,0.01); */
@@ -209,7 +139,7 @@ fieldset{
 fieldset:last-child{
   border-bottom: none;
 }
-input.Btn{
+ .Btn{
   width: 27%;
   float: left;
   display: block;
@@ -224,7 +154,7 @@ input.Btn{
   box-shadow: inset 0 0 0 2px #1B8DA6;
   transition: 0.5s ease;
  }
-input.Btn:hover{
+ .Btn:hover{
   background-color: #1B8DA6;
 }
 
@@ -253,25 +183,13 @@ input.Btn:hover{
   .profile{ 
     width: 450px;
   }
-  .search{
-    float: none;
-    /* top: 0; */
-    left: 0;
-    right: 0;
-    margin: 0 auto;
-  }
+  
 }
 @media only screen and (max-width: 768px){ /*Tablet*/
   .profile{ 
     width: 70%;
   }
-  .search{
-    top: 0;
-    left: 0;
-    right: 0;
-    display: block;
-    margin: 0 auto;
-  }
+   
 }
 @media only screen and (min-width: 320px) and (max-width: 520px){ /*Phone*/
   .profile{
