--- a/src/pages/logIn/logIn.css
+++ b/src/pages/logIn/logIn.css
@@ -1,312 +1,176 @@
-/* @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
-@import url('https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'); */
-*{ margin: 0; padding: 0; -webkit-box-sizing: border-box;
-   -moz-box-sizing: border-box;
-   box-sizing: border-box; }
-body{
-  font-family: 'Roboto', sans-serif;
-  font-style: normal;
-  font-weight: 300;
-  font-smooth: antialiased;
--webkit-font-smoothing: antialiased;
--moz-osx-font-smoothing: grayscale;
-  font-size: 15px;
-  background: #eee;
+body {
+  background-color: rgb(228, 229, 247);
 }
-.intro{
-   background: #fff;
-   padding: 60px 30px;
-   color: #333;
-   margin-bottom: 15px;
-   line-height: 1.5;
-   text-align: center;
+.social-login img {
+  width: 24px;
 }
-.intro h1 {
-   font-size: 18pt;
-   padding-bottom: 15px;
-
-}
-.intro p{
-   font-size: 14px;
-}
-
-.action{
-   text-align: center;
-   display: block;
-   margin-top: 20px;
-}
-
-a.btn {
-  text-decoration: none;
-  color: #666;
-   border: 2px solid #666;
-   padding: 10px 15px;
-   display: inline-block;
-   margin-left: 5px;
-}
-a.btn:hover{
-   background: #666;
-   color: #fff;
-    transition: .3s;
--webkit-transition: .3s;
-}
-.btn:before{
-  font-family: FontAwesome;
-  font-weight: normal;
-  margin-right: 10px;
-}
-.github:before{content: "\f09b"}
-.down:before{content: "\f019"}
-.back:before{content:"\f112"}
-
-/* .credit{
-    background: #fff;
-    padding: 12px;
-    font-size: 9pt;
-    text-align: center;
-    color: #333;
-    margin-top: 40px;
-
-}
-.credit span:before{
-   font-family: FontAwesome;
-   color: #e41b17;
-   content: "\f004";
-
-
-}
-.credit a{
-   color: #333;
-   text-decoration: none;
-}
-.credit a:hover{
-   color: #1DBF73;
-}
-.credit a:hover:after{
-    font-family: FontAwesome;
-    content: "\f08e";
-    font-size: 9pt;
-    position: absolute;
-    margin: 3px;
-} */
-main{
-  background: #fff;
-  padding:  20px;
-
-}
-
-article li{
-   color: #444;
-   font-size: 15px;
-   margin-left: 33px;
-   line-height: 1.5;
-   padding: 5px;
-}
-article h1,
-article h2,
-article h3,
-article h4,
-article p{
-   padding: 14px;
-   color: #333;
-}
-article p{
-   font-size: 15px;
-    line-height: 1.5;
-}
-
-@media only screen and (min-width: 720px){
-    main{
-      max-width: 720px;
-      margin-left: auto;
-      margin-right: auto;
-      padding: 24px;
-    }
-
-
-}
-
-.set-overlayer,
-.set-glass,
-.set-sticky {
-	cursor: pointer;
-	height: 45px;
-	line-height: 45px;
-	padding: 0 15px;
-	color: #333;
-	font-size: 16px;
-}
-.set-overlayer:after,
-.set-glass:after,
-.to-active:after,
-.set-sticky:after {
-	font-family: FontAwesome;
-	font-size: 18pt;
-	position: relative;
-	float: right;
-}
-.set-overlayer:after,
-.set-glass:after,
-.set-sticky:after {
-	content: "\f204";
-	transition: .6s;
-}
-
-/* .to-active:after {
-	content: "\f205";
-	color: #8a0000;
-	transition: .6s;
-} */
-.set-overlayer,
-.set-glass,
-.set-sticky,
-.source,
-.theme-tray {
-	margin: 10px;
-	background: #f2f2f2;
-	border-radius: 5px;
-	border: 2px solid #f1f1f1;
-	box-sizing: border-box;
-}
-/* Syntax Highlighter*/
-
-pre.prettyprint {
-	padding: 15px !important;
-   margin: 10px;
-	border: 0 !important;
-  background: #f2f2f2;
-  overflow: auto;
-}
-
-.source {
-	white-space: pre;
-	overflow: auto;
-	max-height: 400px;
-}
-code{
-    border:1px solid #ddd;
-    padding: 2px;
-    border-radius: 2px;
-}
-
-label{
-    display:  block;
-    text-align: left;
-}
-
-
-
-.form-controlLog{
-   border: none;
-   border: 1px solid #333;
-   border-top: none;
-   border-right: none;
-   border-left: none;
-   display: block;
-   width: 100%;
-   height: 30px;
-   padding: 0;
-   margin-bottom: 25px;
-   margin-top: -3px;
-    }
-
-    .form-controlLog:focus{
-         box-shadow: 0 0 0 rgb(255, 255, 255);
-
-    }
-
-   .form-controlLog::-webkit-input-placeholder {
-     font-size: 13px;
-     color: #333;
-     font-family: "Poppins-Regular"; }
-   .form-controlLog::-moz-placeholder {
-     font-size: 13px;
-     color: #333;
-     font-family: "Poppins-Regular"; }
-   .form-controlLog:-ms-input-placeholder {
-     font-size: 13px;
-     color: #333;
-     font-family: "Poppins-Regular"; }
-   .form-controlLog:-moz-placeholder {
-     font-size: 13px;
-     color: #333;
-     font-family: "Poppins-Regular"; }
  
-     #logInBtn {
-      border: none;
-      width: 164px;
-      height: 51px;
-      margin: auto;
-      cursor: pointer;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 0;
-      background: #1B8DA6;
-      border-radius: 50px;
-      font-size: 15px;
-      color: #fff;
-      vertical-align: middle;
-      -webkit-transform: perspective(1px) translateZ(0);
-      transform: perspective(1px) translateZ(0);
-      -webkit-transition-duration: 0.3s;
-      transition-duration: 0.3s; }
-      #logInBtn i {
-        margin-left: 10px;
-        -webkit-transform: translateZ(0);
-        transform: translateZ(0); }
-        #logInBtn:hover i,  #logInBtn:focus i,  #logInBtn:active i {
-        -webkit-animation-name: hvr-icon-wobble-horizontal;
-        animation-name: hvr-icon-wobble-horizontal;
-        -webkit-animation-duration: 1s;
-        animation-duration: 1s;
-        -webkit-animation-timing-function: ease-in-out;
-        animation-timing-function: ease-in-out;
-        -webkit-animation-iteration-count: 1;
-        animation-iteration-count: 1; }
-        
+.card {
+  font-family: sans-serif;
+  width: 400px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 3em;
+  margin-bottom:3em;
+  border-radius: 10px;
+  background-color: #ffff;
+  padding: 1.8rem;
+  box-shadow: 2px 5px 20px rgba(0, 0, 0, 0.1);
+}
 
-        @-webkit-keyframes hvr-icon-wobble-horizontal {
-         16.65% {
-           -webkit-transform: translateX(6px);
-           transform: translateX(6px); }
-         33.3% {
-           -webkit-transform: translateX(-5px);
-           transform: translateX(-5px); }
-         49.95% {
-           -webkit-transform: translateX(4px);
-           transform: translateX(4px); }
-         66.6% {
-           -webkit-transform: translateX(-2px);
-           transform: translateX(-2px); }
-         83.25% {
-           -webkit-transform: translateX(1px);
-           transform: translateX(1px); }
-         100% {
-           -webkit-transform: translateX(0);
-           transform: translateX(0); } }
-       @keyframes hvr-icon-wobble-horizontal {
-         16.65% {
-           -webkit-transform: translateX(6px);
-           transform: translateX(6px); }
-         33.3% {
-           -webkit-transform: translateX(-5px);
-           transform: translateX(-5px); }
-         49.95% {
-           -webkit-transform: translateX(4px);
-           transform: translateX(4px); }
-         66.6% {
-           -webkit-transform: translateX(-2px);
-           transform: translateX(-2px); }
-         83.25% {
-           -webkit-transform: translateX(1px);
-           transform: translateX(1px); }
-         100% {
-           -webkit-transform: translateX(0);
-           transform: translateX(0); } }
 
-         
 
-          #loginModal{
-            display: block;
-          }
+.title {
+  text-align: center;
+  font-weight: bold;
+  margin: 0;
+}
+.subtitle {
+  text-align: center;
+  font-weight: bold;
+}
+.btn-text {
+  margin: 0;
+}
+
+.social-login {
+  display: flex;
+  justify-content: center;
+  gap: 5px;
+}
+
+.google-btn {
+  background: #fff;
+  border: solid 2px rgb(245 239 239);
+  border-radius: 8px;
+  font-weight: bold;
+  display: flex;
+  padding: 10px 10px;
+  flex: auto;
+  align-items: center;
+  gap: 5px;
+  justify-content: center;
+}
+ 
+.or {
+  text-align: center;
+  font-weight: bold;
+  border-bottom: 2px solid rgb(245 239 239);
+  line-height: 0.1em;
+  margin: 25px 0;
+}
+.or span {
+  background: #fff;
+  padding: 0 10px;
+}
+
+.email-login {
+  display: flex;
+  flex-direction: column;
+}
+.email-login label {
+  color: rgb(170 166 166);
+}
+
+input[name=uname] [type="text"],
+input[name=psw] [type="password"] {
+  padding: 15px 20px;
+  margin-top: 8px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-sizing: border-box;  
+}
+
+.cta-btn {
+  background-color:#1B8DA6;
+  color: white;
+  padding: 18px 20px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  width: 100%;
+  border-radius: 10px;
+  border: none;
+  
+}
+
+.forget-pass {
+  text-align: center;
+  display: block;
+}
+
+
+
+.cta-btn i {
+  margin-left: 10px;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+}
+.cta-btn:hover i,
+.cta-btn:focus i,
+.cta-btn:active i {
+  -webkit-animation-name: hvr-icon-wobble-horizontal;
+  animation-name: hvr-icon-wobble-horizontal;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-timing-function: ease-in-out;
+  animation-timing-function: ease-in-out;
+  -webkit-animation-iteration-count: 1;
+  animation-iteration-count: 1;
+}
+
+
+
+
+@-webkit-keyframes hvr-icon-wobble-horizontal {
+  16.65% {
+    -webkit-transform: translateX(6px);
+    transform: translateX(6px);
+  }
+  33.3% {
+    -webkit-transform: translateX(-5px);
+    transform: translateX(-5px);
+  }
+  49.95% {
+    -webkit-transform: translateX(4px);
+    transform: translateX(4px);
+  }
+  66.6% {
+    -webkit-transform: translateX(-2px);
+    transform: translateX(-2px);
+  }
+  83.25% {
+    -webkit-transform: translateX(1px);
+    transform: translateX(1px);
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+  }
+}
+@keyframes hvr-icon-wobble-horizontal {
+  16.65% {
+    -webkit-transform: translateX(6px);
+    transform: translateX(6px);
+  }
+  33.3% {
+    -webkit-transform: translateX(-5px);
+    transform: translateX(-5px);
+  }
+  49.95% {
+    -webkit-transform: translateX(4px);
+    transform: translateX(4px);
+  }
+  66.6% {
+    -webkit-transform: translateX(-2px);
+    transform: translateX(-2px);
+  }
+  83.25% {
+    -webkit-transform: translateX(1px);
+    transform: translateX(1px);
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+  }
+}
