--- a/src/pages/homePage/homePage.css
+++ b/src/pages/homePage/homePage.css
@@ -1,13 +1,6 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-*:focus {
-  outline: none;
-}
- 
+ body{
+  background: #FAFAFA;
+ }
 .navbar {
   position: sticky;
   top: 0;
