--- a/src/pages/Volunteer_person_screen/bar/navbar.css
+++ b/src/pages/Volunteer_person_screen/bar/navbar.css
@@ -1,4 +1,4 @@
-.topbar0 {
+/* .topbar0 {
     width: 100%;
     height: 60px;
     background-color: #1877f2;
@@ -20,4 +20,4 @@
     font-size: 30px;
     color: white;
     cursor: pointer;
-  }
+  } */
