--- a/src/pages/changePassword/changePassword.css
+++ b/src/pages/changePassword/changePassword.css
@@ -1,4 +1,4 @@
- 
+/*  
 .profile, .content{
   -webkit-transition: 0.5s ease;
   -moz-transition: 0.5s ease;
@@ -17,8 +17,7 @@
   margin-bottom: 100px;
    }
 .content{
-  /* position: absolute; */
-  min-height: 100%;
+   min-height: 100%;
   height: 100%;
   width: 95%;
   margin: 2.5% auto;
@@ -26,8 +25,7 @@
   right: 0;
   top: 0;
   bottom: 0;
-  /*border: 1px solid #eee;*/
-  /*background-color: yellow;*/
+ 
   overflow: hidden;
 }
  
@@ -45,8 +43,7 @@
 
 span.name,span.links > h3,h4{
   font-family: Lato;
-  /*font-weight: 200;*/
-}
+ }
 span.name{
   position: absolute;
   top: 20%;
@@ -95,8 +92,7 @@ fieldset textarea:focus,.inputchangepassword:focus{
   float: left;
   font-weight: 500;
   color: #333;
-  /* text-align: left; */
-}
+ }
 .grid-65{
   position: relative;
   width: 65%;
@@ -109,17 +105,13 @@ fieldset textarea:focus,.inputchangepassword:focus{
   border-bottom: 1px solid #ddd;
 }
  
-/* #CLEARFIX HACK
-=========================*/
-.clear:after{
+ 
+ .clear:after{
   content: " ";
   display: table;
   clear: both;
 }
-
-/* Edit View
-======================*/
-.content h1{
+ .content h1{
   text-align: center;
   color: #555;
   font-family: Lato;
@@ -130,8 +122,7 @@ fieldset textarea:focus,.inputchangepassword:focus{
  
 fieldset{
   text-align: center;
-  /* background-color: rgba(0,0,0,0.01); */
-  margin-bottom: 5px;
+   margin-bottom: 5px;
   padding: 5px;
   box-sizing: border-box;
   border:none;
@@ -169,31 +160,70 @@ fieldset:last-child{
   font-size: 15px;
   white-space: nowrap;
   padding-top:  7px;
-}
+}*/
  
 .Updatepass{
   font-size:xx-large;
   padding-bottom: 20px;
+  padding-left: 450px;
+  padding-top: 20px;
   color: #1B8DA6;
 }
 
-/*Media Queries
-=========================*/
-@media only screen and (min-width: 768px){ /*Desktop*/
-  .profile{ 
-    width: 450px;
-  }
-  
-}
-@media only screen and (max-width: 768px){ /*Tablet*/
-  .profile{ 
-    width: 70%;
-  }
    
-}
-@media only screen and (min-width: 320px) and (max-width: 520px){ /*Phone*/
-  .profile{
-    width: 90%;
+
+
+  .wrapper2{
+    padding-left:500px;
+    padding-top: 20px;
   }
+
+
+  
+  
+
+  
+.Btn{
+  width: 18%;
+  float: left;
+  display: block;
+  margin: 20px auto;
+  margin-left: 7%;
+  padding: 10px 0;
+  font-size: 16px;
+  border-radius: 50px;
+  color: #fff;
+  cursor: pointer;
+  background-color: #1B8DA6;
+  box-shadow: inset 0 0 0 2px #1B8DA6;
+  transition: 0.5s ease;
+  border: #1B8DA6;
+ }
+ .Btn:hover{
+   box-shadow: 0px 4px 12px #1B8DA6;
 }
 
+#cancell{
+   box-shadow: inset 0 0 0 2px #1b8da677 ;
+  color: rgba(0, 0, 0, 0.548);
+  background-color: #1b8da677;
+  border:#1b8da677 ;
+
+
+
+  
+  width: 18%;
+  float: left;
+  display: block;
+  margin: 20px auto;
+  margin-left:-35px;
+  padding: 10px 0;
+  font-size: 16px;
+  border-radius: 50px;
+   cursor: pointer;
+    transition: 0.5s ease;
+}
+
+#cancell:hover{
+  box-shadow: 0px 4px 12px #d1d5d6;
+}
