--- a/src/pages/fileupload/fileupload.css
+++ b/src/pages/fileupload/fileupload.css
@@ -56,7 +56,7 @@
     padding-top: 30px;
   }
   .button1_u button{
-    background: #1877f2;
+    background: #1B8DA6;
     outline: none;
     border: none;
     color: #fff;
@@ -70,7 +70,7 @@
     
   }
   .button3_u button{
-    background: #1877f2;
+    background: #1B8DA6;
     outline: none;
     border: none;
     color: #fff;
@@ -92,7 +92,7 @@
     margin-top: 30px;
   }
   .button2_u button{
-    background: #1877f2;
+    background: #1B8DA6;
     outline: none;
     border: none;
     color: #fff;
