--- a/src/pages/updateProfile/updateProfile.css
+++ b/src/pages/updateProfile/updateProfile.css
@@ -1,4 +1,4 @@
-.profile3,
+/* .profile3,
 .content3 {
   -webkit-transition: 0.5s ease;
   -moz-transition: 0.5s ease;
@@ -17,8 +17,7 @@
   margin-bottom: 100px;
 }
 .content3 {
-  /* position: absolute; */
-  min-height: 100%;
+   min-height: 100%;
   height: 100%;
   width: 95%;
   margin: 2.5% auto;
@@ -26,8 +25,7 @@
   right: 0;
   top: 0;
   bottom: 0;
-  /*border: 1px solid #eee;*/
-  /*background-color: yellow;*/
+ 
 }
 .short-info3 {
   position: relative;
@@ -35,13 +33,10 @@
   height: auto;
   width: 97.5%;
   margin: 1.5% auto;
-  /*background-color: #f5f5f5;*/
-  background-color: #fff;
+   background-color: #fff;
   background-color: #f2ecee;
-  /*border-top: 2px solid #39cb58;*/
-  border-radius: 2.5px;
-  /*box-shadow: inset 0 -1.5px #ddd;*/
-}
+   border-radius: 2.5px;
+ }
 
 span.photo3 {
   position: relative;
@@ -122,9 +117,7 @@ h4 {
   display: inline-block;
   margin: 0;
 }
-
-/*Input Fields Styles
-=========================*/
+ 
 
 fieldset textarea,
 input {
@@ -176,9 +169,14 @@ input:focus {
   width: 65%;
   float: right;
 
-  /* font-family: Source Sans Pro; */
-  font-weight: 300;
+   font-weight: 300;
   font-size: 17px;
+
+
+
+  
+
+
 }
 
 #qualification3 {
@@ -186,16 +184,14 @@ input:focus {
   border-radius: 10px;
 }
 
-/* #CLEARFIX HACK
-=========================*/
-.clear:after {
+ 
+ .clear:after {
   content: " ";
   display: table;
   clear: both;
 }
 
-/* Edit View
-======================*/
+ 
 .content3 h1 {
   text-align: center;
   color: #555;
@@ -207,8 +203,7 @@ input:focus {
 
 fieldset {
   text-align: center;
-  /* background-color: rgba(0,0,0,0.01); */
-  margin-bottom: 5px;
+   margin-bottom: 5px;
   padding: 5px;
   box-sizing: border-box;
   border: none;
@@ -243,23 +238,64 @@ input.Btn3:hover {
   width:150px;
 }
 
-/*Media Queries
-=========================*/
-@media only screen and (min-width: 768px) {
-  /*Desktop*/
-  .profile {
-    width: 450px;
+ 
+
+
+   */
+
+
+
+   .bodyupdateProfile{
+     padding-left: 500px;
+     padding-top: 20px;
+   }
+
+
+ 
+    
+  
+    
+  .Btn3{
+    width: 18%;
+    float: left;
+    display: block;
+    margin: 20px auto;
+    margin-left: 7%;
+    padding: 10px 0;
+    font-size: 16px;
+    border-radius: 50px;
+    color: #fff;
+    cursor: pointer;
+    background-color: #1B8DA6;
+    box-shadow: inset 0 0 0 2px #1B8DA6;
+    transition: 0.5s ease;
+    border: #1B8DA6;
+   }
+   .Btn3:hover{
+     box-shadow: 0px 4px 12px #1B8DA6;
   }
-}
-@media only screen and (max-width: 768px) {
-  /*Tablet*/
-  .profile {
-    width: 70%;
+  
+  #cancel3{
+     box-shadow: inset 0 0 0 2px #1b8da677 ;
+    color: rgba(0, 0, 0, 0.548);
+    background-color: #1b8da677;
+    border:#1b8da677 ;
+  
+  
+  
+    
+    width: 18%;
+    float: left;
+    display: block;
+    margin: 20px auto;
+    margin-left:-35px;
+    padding: 10px 0;
+    font-size: 16px;
+    border-radius: 50px;
+     cursor: pointer;
+      transition: 0.5s ease;
   }
-}
-@media only screen and (min-width: 320px) and (max-width: 520px) {
-  /*Phone*/
-  .profile {
-    width: 90%;
+  
+  #cancel3:hover{
+    box-shadow: 0px 4px 12px #d1d5d6;
   }
-}
